--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -21,7 +21,7 @@ import mongoSvg from '../images/tech_icons/mongodb-icon.svg'
 import reactSpringSvg from '../images/tech_icons/react-spring.svg'
 ---
 <MainLayout title="Portafolio: Francisco - Resume" activePage= "resume">
-    <section class="load bg-[#081710]">
+    <section class="load">
         <div class="flex justify-end px-10">
             <div class="flex rounded border-2 border-[#3BA576] text-[#3BA576] hover:text-black hover:bg-[#3BA576] overflow-hidden w-fit my-4">
                 <a href={resumeImgSrc} target="_blank" class="group text-sm py-2 px-2 mx-2 font-bold">
