--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -125,25 +125,19 @@ if(activePage === "home") {
 	var columns = [];
 	var maxStackHeight;
 	
-	function init()
-	{
+	function init() {
 		canvas = document.getElementById( 'canvas' );
 		ctx = canvas.getContext( '2d' );
 		ctx.fillStyle = "#081710"
 	
 		// https://developer.mozilla.org/en-US/docs/Web/API/ResizeObserver
-		const resizeObserver = new ResizeObserver( entries =>
-		{
-			for ( let entry of entries )
-			{
-				if ( entry.contentBoxSize )
-				{
+		const resizeObserver = new ResizeObserver( entries => {
+			for ( let entry of entries ) {
+				if ( entry.contentBoxSize ) {
 					// Firefox implements `contentBoxSize` as a single content rect, rather than an array
 					const contentBoxSize = Array.isArray( entry.contentBoxSize ) ? entry.contentBoxSize[0] : entry.contentBoxSize;
-	
 					canvas.width = contentBoxSize.inlineSize;
 					canvas.height = window.innerHeight;
-	
 					initMatrix();
 				}
 			}
@@ -156,15 +150,13 @@ if(activePage === "home") {
 		tick();
 	}
 	
-	function initMatrix()
-	{
+	function initMatrix() {
 		columns = [];
 	
 		maxStackHeight = Math.ceil(canvas.height/tileSize);
 	
 		// divide the canvas into columns
-		for ( let i = 0 ; i < canvas.width/tileSize ; ++i )
-		{
+		for ( let i = 0 ; i < canvas.width/tileSize ; ++i ) {
 			var column = {};
 			// save the x position of the column
 			column.x = i*tileSize;
@@ -177,26 +169,20 @@ if(activePage === "home") {
 		}
 	}
 	
-	function draw(){
-		// // draw a semi transparent black rectangle on top of the scene to slowly fade older characters
-		// ctx.fillStyle = "rgb(8,23,16 )";
-		// ctx.fillRect( 0 , 0 , canvas.width , canvas.height );
-		
+	function draw() {
 		//draw a semi transparent black rectangle on top of the scene to slowly fade older characters
 		ctx.fillStyle = "rgba( 8,23,16 , "+fadeFactor+" )";
 		ctx.fillRect( 0 , 0 , canvas.width , canvas.height );
 	
 		ctx.font = (tileSize-2)+"px monospace";
 		ctx.fillStyle = "rgb(59, 165, 118 )";
-		for ( let i = 0 ; i < columns.length ; ++i )
-		{
+		for ( let i = 0 ; i < columns.length ; ++i ) {
 			// pick a random ascii character (change the 94 to a higher number to include more characters)
 			var randomCharacter = String.fromCharCode( 33+Math.floor(Math.random()*94) );
 			ctx.fillText( randomCharacter , columns[i].x , columns[i].stackCounter*tileSize+tileSize );
 	
 			// if the stack is at its height limit, pick a new random height and reset the counter
-			if ( ++columns[i].stackCounter >= columns[i].stackHeight )
-			{
+			if ( ++columns[i].stackCounter >= columns[i].stackHeight ) {
 				columns[i].stackHeight = 10+Math.random()*maxStackHeight;
 				columns[i].stackCounter = 0;
 			}
@@ -204,22 +190,17 @@ if(activePage === "home") {
 	}
 	
 	// MAIN LOOP
-	function tick() 
-	{    
+	function tick() {    
 		draw();
 		setTimeout( tick , 50 );
 	}
 	
-	var b_isFullscreen = false;
-	
-	function updateTileSize()
-	{
+	function updateTileSize() {
 		tileSize = Math.min( Math.max( document.getElementById("tileSize").value , 10 ) , 100 );
 		initMatrix();
 	}
 	
-	function updateFadeFactor()
-	{
+	function updateFadeFactor() {
 		fadeFactor = Math.min( Math.max( document.getElementById("fadeFactor").value , 0.0 ) , 1.0 );
 		initMatrix();
 	}
@@ -227,8 +208,6 @@ if(activePage === "home") {
 	window.addEventListener("load", (event) => {
 		init();
 	});
-
-
 </script>
 
 <style is:global>
