--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import charMobile_full from '../images/char_original.png'
 //NOTE: JS here is treated like server side pre render
 ---
 <MainLayout title="Portafolio: Francisco - Home" activePage= "home" >
-<section class="load">
+<section class="load mb-40">
     <!-- Text/ Clip art - Hero Section -->
     <div class="mx-auto max-w-screen-xl text-center pt-14 pl-10 md:pl-48 lg:pl-80 pr-10 md:pr-10">
         <div class="grid grid-cols-2 gap-4 ">
