--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -17,7 +17,7 @@ import ContactForm from "../components/ContactForm.vue"
                 hesitate to reach out. Fill out the contact form and I'll get back to you as 
                 soon as possible.
             </p>
-          <ContactForm client:visible/> 
+          <ContactForm class="mb-20" client:visible/> 
         </div>
     </section>
 </MainLayout>
