--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -53,7 +53,7 @@ if(activePage === "home") {
 	</head>
 	<body class="text-white">   
 		<canvas id="canvas" ></canvas>
-		<nav class="border-gray-200 px-2 sm:px-4 py-2.5 rounded">
+		<nav class="border-gray-200 px-2 sm:px-4 py-2.5 rounded ">
 			<div  class="container flex flex-wrap items-center justify-end mx-auto">
 				<!-- Hamburger Menu -->
 				<button id="nav_btn" data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
@@ -78,7 +78,7 @@ if(activePage === "home") {
 					</ul>
 				</div>
 				<!-- ----DEFAULT MOBILE NAVIGATION---- -->
-				<div class="md:hidden transition-transform w-[90%] overflow-hidden scale-y-0 absolute top-10 mx-5" id="navbar-mobile">
+				<div class="md:hidden transition-transform w-[90%] overflow-hidden scale-y-0 absolute top-10 mx-5 z-10" id="navbar-mobile">
 					<ul class="flex flex-col p-4 mt-4 border border-[#3BA576] rounded-lg bg-[#081710] md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0">
 					<li>
 						<a href="/" class={homeCSS} aria-current="page">Home</a>
