--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,17 +1,27 @@
 ---
-import dogImage from '../images/404-dog.png';
+import dogImage from "../images/404-dog.png";
 ---
-<body class="bg-[#081710] text-white"> 
-    <div class="h-screen justify-center">
-        <center class="mt-24 m-auto">
-            <img class="md:w-80 w-[100%] animate-bounce-slow" src={dogImage}>
-            <div class=" tracking-widest mt-4">
-                <span class="md:text-8xl text-4xl font-bold block"><span>4  0  4</span></span>
-                <span class="md:text-4xl text-3xl px-4">Sorry, We couldn't find what you are looking for! Heres a corgi in a space suit to cheer you up :)</span>
-            </div>
-            </center>
-            <center class="mt-6">
-            <a href="/" class="flex rounded border-2 border-[#3BA576] text-[#3BA576] hover:text-black hover:bg-[#3BA576] overflow-hidden w-fit px-8 py-4 my-4 md:text-sm text-7xl">Go back </a>
-        </center>
-    </div>
+
+<body class="bg-[#081710] text-white">
+  <div class="h-screen justify-center">
+    <center class="m-auto mt-24">
+      <img class="w-[100%] animate-bounce-slow md:w-80" src={dogImage} />
+      <div class="mt-4 tracking-widest">
+        <span class="block text-4xl font-bold md:text-8xl">
+          <span> 4 0 4</span>
+        </span>
+        <span class="px-4 text-3xl md:text-4xl">
+          Sorry, We couldn't find what you are looking for! Heres a corgi in a
+          space suit to cheer you up :)
+        </span>
+      </div>
+    </center>
+    <center class="mt-6">
+      <a
+        href="/"
+        class="my-4 flex w-fit overflow-hidden rounded border-2 border-[#3BA576] px-8 py-4 text-7xl text-[#3BA576] hover:bg-[#3BA576] hover:text-black md:text-sm">
+        Go back
+      </a>
+    </center>
+  </div>
 </body>
