--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,23 +2,24 @@
 /**
  * Contact Page
  */
- import MainLayout from "../layouts/MainLayout.astro";
-import ContactForm from "../components/ContactForm.vue"
+import MainLayout from "../layouts/MainLayout.astro";
+import ContactForm from "../components/ContactForm.vue";
 ---
-<MainLayout title="Portafolio: Francisco - Contact" activePage= "contact">
-    <section class="load">
-        <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-12">
-            <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none  md:text-5xl lg:text-6xltext-white">
-               Contact Form
-            </h1>
-            <p>
-                Thank you for visiting my portfolio! I appreciate your interest in my work. 
-                If you have any questions, comments or just want to say hello, please don't 
-                hesitate to reach out. Fill out the contact form and I'll get back to you as 
-                soon as possible.
-            </p>
-          <ContactForm class="mb-20" client:visible/> 
-        </div>
-    </section>
-</MainLayout>
 
+<MainLayout title="Portafolio: Francisco - Contact" activePage="contact">
+  <section class="load">
+    <div class="mx-auto max-w-screen-xl px-4 py-8 lg:py-16 lg:px-12">
+      <h1
+        class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-white md:text-5xl lg:text-6xl">
+        Contact Form
+      </h1>
+      <p>
+        Thank you for visiting my portfolio! I appreciate your interest in my
+        work. If you have any questions, comments or just want to say hello,
+        please don't hesitate to reach out. Fill out the contact form and I'll
+        get back to you as soon as possible.
+      </p>
+      <ContactForm class="mb-20" client:visible />
+    </div>
+  </section>
+</MainLayout>
