fixed section size on index

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,7 @@ import profile from "../images/profile.jpg";
 ---
 
 <MainLayout title="Portafolio: Francisco - About" activePage="about">
-  <section class="load mb-20">
+  <section class="load h-screen">
     <div class="p-16">
       <div class="mt-24 rounded-md border-2 border-[#3BA576] bg-[#081710] p-8">
         <div class="grid grid-cols-1 md:grid-cols-3">
