--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,41 +9,34 @@ import charMobile_full from "../images/char_original.png";
 ---
 
 <MainLayout title="Portafolio: Francisco - Home" activePage="home">
-  <section class="load mb-40">
+  <section class="load h-screen">
     <!-- Text/ Clip art - Hero Section -->
     <div
-      class="mx-auto max-w-screen-xl pt-14 pl-10 pr-10 text-center md:pl-48 md:pr-10 lg:pl-80"
-    >
+      class="mx-auto max-w-screen-xl pt-14 pl-10 pr-10 text-center md:pl-48 md:pr-10 lg:pl-80">
       <div class="grid grid-cols-2 gap-4">
         <div class="pt-20">
           <h1
-            class="text-gray-90 hidden w-full text-5xl font-extrabold sm:block sm:w-auto"
-          >
+            class="text-gray-90 hidden w-full text-5xl font-extrabold sm:block sm:w-auto">
             Welcome
           </h1>
           <h1
-            class="hidden w-full text-xl font-extrabold dark:text-white sm:block sm:w-auto"
-          >
+            class="hidden w-full text-xl font-extrabold dark:text-white sm:block sm:w-auto">
             This is my portafolio website, I’m
           </h1>
           <h1
-            class="text-gray-90 block w-full text-left text-4xl font-extrabold sm:hidden sm:w-auto"
-          >
+            class="text-gray-90 block w-full text-left text-4xl font-extrabold sm:hidden sm:w-auto">
             Welcome,
           </h1>
           <h1
-            class="text-gray-90 block w-full text-left text-2xl font-extrabold sm:hidden sm:w-auto"
-          >
+            class="text-gray-90 block w-full text-left text-2xl font-extrabold sm:hidden sm:w-auto">
             This is my portafolio website, I’m
           </h1>
           <h1
-            class="text-gray-90 my-1 hidden w-full align-text-bottom text-5xl font-extrabold sm:block sm:w-auto"
-          >
+            class="text-gray-90 my-1 hidden w-full align-text-bottom text-5xl font-extrabold sm:block sm:w-auto">
             Francisco Paliouras
           </h1>
           <h1
-            class="text-white-90 col-span-2 mx-auto my-0 hidden w-[50%] bg-green-500 align-text-bottom text-3xl font-semibold sm:block"
-          >
+            class="text-white-90 col-span-2 mx-auto my-0 hidden w-[50%] bg-green-500 align-text-bottom text-3xl font-semibold sm:block">
             a Web Developer
           </h1>
         </div>
@@ -58,13 +51,11 @@ import charMobile_full from "../images/char_original.png";
           src={charMobile_full}
         />
         <h1
-          class="text-gray-90 col-span-2 mb-0 block w-full text-left text-4xl font-extrabold sm:hidden sm:w-full"
-        >
+          class="text-gray-90 col-span-2 mb-0 block w-full text-left text-4xl font-extrabold sm:hidden sm:w-full">
           Francisco Paliouras
         </h1>
         <h1
-          class="text-white-90 col-span-2 block w-[70%] bg-green-500 px-8 text-left align-text-bottom text-3xl font-semibold sm:hidden sm:w-full"
-        >
+          class="text-white-90 col-span-2 block w-[70%] bg-green-500 px-8 text-left align-text-bottom text-3xl font-semibold sm:hidden sm:w-full">
           a Web Developer
         </h1>
       </div>
@@ -72,8 +63,7 @@ import charMobile_full from "../images/char_original.png";
       <!-- Button Grid - Hero Section -->
       <div class="mx-auto grid w-fit grid-cols-2 gap-x-0 md:ml-[12%]">
         <div
-          class="my-4 flex w-fit overflow-hidden rounded border-2 border-[#3BA576] text-[#3BA576] hover:bg-[#3BA576] hover:text-black"
-        >
+          class="my-4 flex w-fit overflow-hidden rounded border-2 border-[#3BA576] text-[#3BA576] hover:bg-[#3BA576] hover:text-black">
           <a href="/resume" class="group mx-2 py-2 px-2 text-sm font-bold">
             <p class="inline">Resume</p>
             <svg
@@ -81,8 +71,7 @@ import charMobile_full from "../images/char_original.png";
               aria-hidden="true"
               fill="currentColor"
               viewBox="0 0 24 24"
-              xmlns="http://www.w3.org/2000/svg"
-            >
+              xmlns="http://www.w3.org/2000/svg">
               <path
                 clip-rule="evenodd"
                 d="M5.625 1.5H9a3.75 3.75 0 013.75 3.75v1.875c0 1.036.84 1.875 1.875 1.875H16.5a3.75 3.75 0 013.75 3.75v7.875c0 1.035-.84 1.875-1.875 1.875H5.625a1.875 1.875 0 01-1.875-1.875V3.375c0-1.036.84-1.875 1.875-1.875zm5.845 17.03a.75.75 0 001.06 0l3-3a.75.75 0 10-1.06-1.06l-1.72 1.72V12a.75.75 0 00-1.5 0v4.19l-1.72-1.72a.75.75 0 00-1.06 1.06l3 3z"
@@ -94,8 +83,7 @@ import charMobile_full from "../images/char_original.png";
           </a>
         </div>
         <div
-          class="my-4 flex w-fit overflow-hidden rounded border-2 border-[#3BA576] text-[#3BA576] hover:bg-[#3BA576] hover:text-black"
-        >
+          class="my-4 flex w-fit overflow-hidden rounded border-2 border-[#3BA576] text-[#3BA576] hover:bg-[#3BA576] hover:text-black">
           <a href="/contact" class="group mx-2 py-2 px-2 text-sm font-bold">
             <p class="inline">Contact Me</p>
             <svg
@@ -103,8 +91,7 @@ import charMobile_full from "../images/char_original.png";
               aria-hidden="true"
               fill="currentColor"
               viewBox="0 0 24 24"
-              xmlns="http://www.w3.org/2000/svg"
-            >
+              xmlns="http://www.w3.org/2000/svg">
               <path
                 clip-rule="evenodd"
                 d="M19.5 9.75a.75.75 0 01-.75.75h-4.5a.75.75 0 01-.75-.75v-4.5a.75.75 0 011.5 0v2.69l4.72-4.72a.75.75 0 111.06 1.06L16.06 9h2.69a.75.75 0 01.75.75z"
