added about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,7 @@ import profile from "../images/profile.jpg";
 ---
 
 <MainLayout title="Portafolio: Francisco - About" activePage="about">
-  <section class="load h-screen">
+  <section class="load">
     <div class="p-16">
       <div class="mt-24 rounded-md border-2 border-[#3BA576] bg-[#081710] p-8">
         <div class="grid grid-cols-1 md:grid-cols-3">
@@ -20,13 +20,64 @@ import profile from "../images/profile.jpg";
         </div>
         <div
           class="mt-24 border-b border-[#3BA576] pb-12 text-center text-[#3BA576]">
-          <h1 class="text-4xl font-medium">Francisco Paliouras</h1>
+          <h1 class="text-4xl font-medium font-bold text-white">
+            Francisco Paliouras
+          </h1>
           <p class="mt-8">Currently Working @ TotalBrokerage</p>
           <p class="mt-2">Full Stack Web Developer</p>
-          <p class="mt-2">Rochester Institute of Technology</p>
+          <p class="mt-2">
+            Rochester Institute of Technology - Graduating May 2023
+          </p>
+          <p class="mt-2">
+            <span class="font-bold text-white"> Phone:</span> (561) 460 - 7972 |
+            <span class="under font-bold text-white"> Email:</span>
+            franciscopaliouras@gmail.com
+          </p>
         </div>
         <div class="mt-12 flex flex-col justify-center text-[#3BA576]">
-          <p class="text-center font-light lg:px-16">To be Added ...</p>
+          <p class="font-light lg:px-16">
+            Hey there, nice to meet you! I'm Francisco Paliouras, a
+            Greek/Peruvian with a strong passion for improving the quality of
+            all aspects of life, both for myself and others. I am known to be a
+            relentless person and truly believe that perseverance and effort
+            trump talent any day of the week. I am a full-stack developer coming
+            from a graphic design background so I'm particularly fond of
+            front-end development. Still, I'm always eager to learn about new
+            technologies outside that scope. I'm constantly on the lookout for
+            opportunities to grow and make a real impact on the world, and I
+            love working with people who share my enthusiasm. If you want to get
+            to know me better, ask me about food - I'm a huge fan of cooking and
+            eating, and I believe that good food is one of the great joys in
+            life. Please feel free to shoot me an email, call or use the contact
+            from on this site to reach out to me for any questions.
+          </p>
+          <div class="my-4 text-white">
+            <h2 class="font-bold">Favorite Quotes:</h2>
+            <p>
+              These are a few quotes that I always look back to and have helped
+              me mold my understanding of the world and shape my core beliefs.
+            </p>
+          </div>
+          <ul class="list-disc">
+            <li>
+              <p class="mb-4">
+                “If you are the smartest person in the room, then you are in the
+                wrong room.” - Confucius
+              </p>
+            </li>
+            <li>
+              <p class="mb-4">
+                “Good artists borrow, great artists steal.” - Pablo Picasso
+              </p>
+            </li>
+            <li>
+              <p class="mb-4">
+                “Everybody is a genius. But if you judge a fish by its ability
+                to climb a tree, it will live its whole life believing that it
+                is stupid.” - Albert Einstein
+              </p>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
