fixed resume img

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -7,7 +7,7 @@ import ResumeItem from "../layouts/ResumeItem.astro";
 import TechnicalSkillList from "../components/TechnicalSkillList.vue";
 
 // SVG IMGS
-import resumeImgSrc from "../images/resume.jpg";
+import resumeImgSrc from "../images/resume.png";
 import springSvg from "../images/tech_icons/spring-icon.svg";
 import jsSvg from "../images/tech_icons/javascript.svg";
 import javaSvg from "../images/tech_icons/java.svg";
